# ANBot

./: .env  .gitignore  alembic.ini  anb.db  anbot.py  config.py  main.py  providers.py  pyproject.toml  test.py
alembic/versions/: 7532f3db7f6e_инициация.py  a122e233e925_инициация.py
db/: models.py  repo.py  schema.sql
dialogs/: dialogs.py  getters.py  handlers.py  states.py
service/: draw.py  message.py  modbus.py  plot.py
