[project]
name = "anbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "aiogram-dialog>=2.4.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "apscheduler>=3.11.0",
    "babel>=2.17.0",
    "matplotlib>=3.10.3",
    "pydantic-settings>=2.10.1",
    "pymodbus>=3.10.0",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
]
